[package]
name = "gm-hsm-skf"
version = "0.1.1"
edition = "2021"
authors = [
    "CJ <power4j@outlook.com>",
]
description = """
Rust wrapper for GM/T 0016-2012(Smart token cryptography application interface specification).
"""
readme = "README.md"
documentation = "https://docs.rs/gm-hsm-skf"
repository = "https://github.com/power4j/gm-hsm"
license = "MIT"
keywords = ["GM", "cryptography", "PKI"]
categories = ["hardware-support"]

[dependencies]
gm-hsm-sys = { path = "../gm-hsm-sys", version = "0.1.2", features = ["skf", "dll"] }
tracing = "0.1"
thiserror = "2"
anyhow = "1"
libloading = "0.8"

[dev-dependencies]
hex = "0.4"